k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend-container
          image: ecommerce-frontend
          imagePullPolicy: Never

          ports:
            - containerPort: 3000
